--- a/4ifir Wizard source code/4Advanced/CPU/config.ini
+++ b/4ifir Wizard source code/4Advanced/CPU/config.ini
@@ -1,26 +1,9 @@
-[*CPU Minimal Voltage]
+-- Manual
+
+[*CPU Min Volt]
 catch_errors
 json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/CPU/json/cpuv.json' name 48
 hex-by-cust-offset /atmosphere/kips/loader.kip 48 {json_mark_cur_kip(*,hex)}
-back
-
-[*CPU Maximum Voltage]
-; Mariko
-catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/CPU/json/voltage_mariko.json' name 28
-hex-by-cust-offset /atmosphere/kips/loader.kip 28 {json_mark_cur_kip(*,hex)}
-back
-
-[*dCPUv]
-catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/CPU/json/dcpuv.json' name 12348
-hex-by-cust-offset /atmosphere/kips/loader.kip 12348 {json_mark_cur_kip(*,hex)}
-back
-
-[*CPU Boost Clock]
-catch_errors
-json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/CPU/json/cpu boost.json' name 12
-hex-by-cust-offset /atmosphere/kips/loader.kip 12 {json_mark_cur_kip(*,hex)}
 back
 
 [*Low MHz Undervolt]
@@ -37,16 +20,39 @@ json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/CPU/json/undervolt_h
 hex-by-cust-offset /atmosphere/kips/loader.kip 12340 {json_mark_cur_kip(*,hex)}
 back
 
-
-[*CPU Voltage Limit]
+[*CPU Volt Limit]
 ; Erista
 catch_errors
 json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/CPU/json/voltage_erista.json' name 20
 hex-by-cust-offset /atmosphere/kips/loader.kip 20 {json_mark_cur_kip(*,hex)}
 back
 
+
+-- eBamatic
+
+
+[*CPU Max Volt]
+; Mariko
+catch_errors
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/CPU/json/voltage_mariko.json' name 28
+hex-by-cust-offset /atmosphere/kips/loader.kip 28 {json_mark_cur_kip(*,hex)}
+back
+
+[*dCPUv]
+catch_errors
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/CPU/json/dcpuv.json' name 12348
+hex-by-cust-offset /atmosphere/kips/loader.kip 12348 {json_mark_cur_kip(*,hex)}
+back
+
+[*CPU Boost]
+catch_errors
+json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/CPU/json/cpu boost.json' name 12
+hex-by-cust-offset /atmosphere/kips/loader.kip 12 {json_mark_cur_kip(*,hex)}
+back
+
+
 [*Speed Shift]
 catch_errors
 json_mark_cur_kip '/switch/.packages/4IFIR Wizard/4Advanced/CPU/json/SpeedShift.json' name 12336
-hex-by-cust-offset /atmosphere/kips/loader.kip 12336 {json_mark_cur_kip(*,hex)}
+hex-by-cust-offset-dec /atmosphere/kips/loader.kip 12336 {json_mark_cur_kip(*,dec)}
 back
